--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mobx": "^6.0.0",
     "mobx-react": "^7.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@theadmasters/version-manager": "^0.2.0",
@@ -34,10 +35,12 @@
     "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "@types/script-ext-html-webpack-plugin": "^2.1.1",
     "@types/terser-webpack-plugin": "^4.2.0",
     "@types/webpack": "^4.41.22",
     "@types/webpack-dev-server": "^3.11.0",
+    "autoprefixer": "^10.0.1",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^4.3.0",
     "html-loader": "^1.3.1",
@@ -45,6 +48,7 @@
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "^8.1.1",
     "postcss-loader": "^4.0.2",
     "sass-loader": "^10.0.2",
     "script-ext-html-webpack-plugin": "^2.1.4",
