--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web DAW",
   "main": "src/index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "TS_NODE_PROJECT=tsconfig.test.json mocha -r ts-node/register ./src/**/*.test.ts",
     "dev": "TS_NODE_PROJECT=webpack/tsconfig.json CONFIG=development webpack-dev-server --hot --inline --watch-poll --colors --host 0.0.0.0 --port 1337 --config webpack/config.ts",
     "build": "TS_NODE_PROJECT=webpack/tsconfig.json CONFIG=production MODE=patch webpack --config webpack/config.ts",
     "build:minor": "TS_NODE_PROJECT=webpack/tsconfig.json CONFIG=production MODE=minor webpack --config webpack/config.ts",
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@theadmasters/version-manager": "^0.2.0",
     "@types/mini-css-extract-plugin": "^0.9.1",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^14.11.2",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
     "@types/react": "^16.9.49",
@@ -46,12 +47,14 @@
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^0.11.2",
+    "mocha": "^9.1.1",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.1.1",
     "postcss-loader": "^4.0.2",
     "sass-loader": "^10.0.2",
     "script-ext-html-webpack-plugin": "^2.1.4",
+    "should": "^13.2.3",
     "source-map-loader": "^1.1.0",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.2.2",
