--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mobx-react": "^7.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.1"
+    "react-router-dom": "^5.2.1",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@theadmasters/version-manager": "^0.2.0",
@@ -39,6 +40,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/script-ext-html-webpack-plugin": "^2.1.1",
     "@types/terser-webpack-plugin": "^4.2.0",
+    "@types/uuid": "^8.3.1",
     "@types/webpack": "^4.41.22",
     "@types/webpack-dev-server": "^3.11.0",
     "autoprefixer": "^10.0.1",
